--- a/templates/account.html
+++ b/templates/account.html
@@ -9,7 +9,7 @@
     <!-- Stylesheets & Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/static/css/style.css" rel="stylesheet"/>
+    <!-- <link href="/static/css/styles.css" rel="stylesheet"/>  -->
     <link rel="icon" href="/static/images/download.jpg" type="image/jpeg">
 
     <!-- Inline Custom Styles -->
