--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" href="/static/images/download.jpg" type="image/jpeg">
+    <link href="/static/css/styles.css" rel="stylesheet">
     
     <style>
         :root {
